# my-rag-chatbot

./: .gitignore  Dockerfile  README.md  env.example  instruction.md  main.py  pyproject.toml  requirements.txt  run.sh  test_api.py
app/core/: config.py
app/services/: llm_service.py  pdf_processor.py  query_processor.py  text_chunker.py  vector_store.py
